--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,20 @@
-body {
-  background-color: var(--background-color);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
-  color: var(--text-color);
-  font-size: 2rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  color: var(--color-primary);
-  font-size: 5rem;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.6rem;
+  background-color: var(--neutral-900);
+  color: var(--neutral-50);
 }
