--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,9 +1,49 @@
 :root {
-  --color-primary: #8338ec;
-  --color-secondary: #ffbe0b;
-  --color-tertiary: #fb5607;
-  --color-quaternary: #ff006e;
-  --color-quinary: #8338ec;
+  --gray-100: #f1f5f9;
+  --gray-200: #e2e8f0;
+  --gray-300: #cbd5e1;
+  --gray-400: #94a3b8;
+  --gray-500: #64748b;
+  --gray-600: #475569;
+  --gray-700: #334155;
+  --gray-800: #1e293b;
+  --gray-900: #0f172a;
 
-  --background-color: #f7f7f7;
+  --neutral-50: #fafafa;
+  --neutral-100: #f5f5f5;
+  --neutral-200: #e5e5e5;
+  --neutral-300: #d4d4d4;
+  --neutral-400: #a3a3a3;
+  --neutral-500: #737373;
+  --neutral-600: #525252;
+  --neutral-700: #404040;
+  --neutral-800: #262626;
+  --neutral-900: #171717;
+  --neutral-950: #0a0a0a;
+
+  --primary-light: #60a5fa;
+  --primary: #2563eb;
+  --primary-dark: #1e40af;
+
+  --link-color: #3b82f6;
+  --link-hover: #1d4ed8;
+
+  --success: #4ade80;
+  --warning: #fbbf24;
+  --error: #ef4444;
+  --info: #38bdf8;
+
+  --text-over-primary: #f8fafc;
+  --text-over-primary-dark: #f8fafc;
+  --text-over-primary-light: #0f172a;
+  --text-over-success: #0f172a;
+  --text-over-warning: #0f172a;
+  --text-over-error: #f8fafc;
+  --text-over-info: #0f172a;
+
+  --text-default: #f1f5f9;
+  --text-muted: #94a3b8;
+
+  --disabled: #64748b;
+  --text-disabled: #94a3b8;
 }
