--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+ul,
+ol {
+  list-style: none;
+}
+
+a,
+button {
+  cursor: pointer;
+  border: none;
+  background: none;
+  outline: none;
+  color: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
 html {
   font-size: 62.5%;
 }
