feat: add CycleDot and Cycles components with styles

--- a/src/components/taskForm/styles.module.css
+++ b/src/components/taskForm/styles.module.css
@@ -35,10 +35,16 @@
   width: 1.8rem;
   height: 1.8rem;
 }
-.taskFormForm {
+
+.taskFormFormContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.6rem;
+  gap: 1.6rem;
+}
+
+.taskFormFormContent {
   display: flex;
   width: 100%;
   gap: 0.8rem;
-
-  margin-top: 1.6rem;
 }
